--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,12 @@ sourceCompatibility = '17'
 
 description = 'Provides functionality for managing the books in the catalog.'
 
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+
 repositories {
     mavenCentral()
 }
@@ -21,6 +27,10 @@ dependencies {
 
     // validation
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    // webflux
+    testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
+    // annotation processor
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 }
 
 tasks.named('test') {
